2013-12-18 Marco Randazzo <marco.randazzo@iit.it>
    * src\libYARP_sig\src\soundfile.cpp

    fixed a bug preventing .wav files containing non-data chucks to be loaded correctly
    
2013-12-12 Marco Randazzo <marco.randazzo@iit.it>
    * example/portaudio 
    
    added example: read audio from a file and send data to a port 
    
2013-11-13 Alessandro Scalzo <alessandro.scalzo@iit.it>
    * src/libYARP_OS/include/yarp/os/impl/RunProcManager.h
    * src/libYARP_OS/include/yarp/os/impl/RunCheckpoints.h
    * src/libYARP_OS/include/yarp/os/impl/RunReadWrite.h
    * src/libYARP_OS/include/yarp/os/Run.h
    * src/libYARP_OS/src/RunProcManager.cpp
    * src/libYARP_OS/src/RunCheckpoints.cpp
    * src/libYARP_OS/src/RunReadWrite.cpp
    * src/libYARP_OS/src/Run.cpp

2013-07-26  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
    * Tagging 2.3.22

2013-07-05  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
    * Tagging 2.3.21

2013-07-03 Marco Randazzo <marco.randazzo@iit.it>
    * src/libYARP_dev/src/TorqueControlImpl.cpp
    * src/libYARP_dev/src/ServerControlBoard.cpp
    * src/libYARP_dev/src/RemoteControlBoard.cpp
    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
    * src/libYARP_dev/include/yarp/dev/ITorqueControl.h
    * src/libYARP_dev/include/yarp/dev/ImplementTorqueControl.h
    
    added getBemfParam() setBemfParam() methods to iTorqueControl Interface 
    
2013-07-01 Marco Randazzo <marco.randazzo@iit.it>
    * src/libYARP_dev/include/yarp/dev/ControlBoardPid.h
    * src/libYARP_dev/src/ControlBoardPid.cpp
    
    added Kff feedforward gain to Pid 
    
2013-06-18 Alessandro Scalzo <alessandro.scalzo@iit.it>
    * src/libYARP_OS/include/yarp/os/impl/RunProcManager.h
    * src/libYARP_OS/src/RunProcManager.cpp
    * src/libYARP_OS/src/RunCheckpoints.cpp
    * src/libYARP_OS/src/Run.cpp

    Zombie hunter function has now its own thread.

2013-05-27 Lorenzo Natale <lorenzo.natale@iit.it>